<resources>
    <string name="app_name">Are We There Yet lawsont2</string>
    <string name="dummy">Dummy</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="newloc">New Location</string>
    <string name="newButton">New</string>
    <string name="provider">Provider:</string>
    <string name="locHint">Enter location here</string>
    <string name="mode">Default Mode:</string>
    <string name="eb2250">2250 Engineering</string>
    <string name="sparty">Sparty</string>
    <string name="home">Home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="map_it">Map It</string>
    <string name="saveFav">Save Favorite</string>
    <string name="allFavs">All Favorites</string>
    <string name="favTag">Pick a favorite</string>
</resources>
