<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingStart="80dp"
    android:paddingEnd="80dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/textLabelProvider"
        android:text="@string/dummy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLabelProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textLabelLongitude"
        android:text="@string/provider"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textProvider"
        android:layout_alignBaseline="@id/textLabelLatitude"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/textLabelLatitude"
        android:text="@string/dummy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLabelLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelProvider"
        android:layout_alignEnd="@id/textLabelLongitude"
        android:text="@string/latitude"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textLabelLongitude"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/textLabelLongitude"
        android:text="@string/dummy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLabelLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelLatitude"
        android:text="@string/longitude"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelLongitude"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/dummy"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTo"
        android:gravity="center"
        android:text="@string/dummy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textNewLocLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDistance"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/newloc"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNewLocLabel"
        android:hint="@string/locHint"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_alignParentEnd="true"
        android:text="@string/newButton" />
</RelativeLayout>